--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.tao.ai.rl</groupId>
 	<artifactId>tabular</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<repositories>
-        <repository>
-            <id>neuroph.sourceforge.net</id>
-            <url>http://neuroph.sourceforge.net/maven2/</url>
-        </repository>        
+		<repository>
+			<id>neuroph.sourceforge.net</id>
+			<url>http://neuroph.sourceforge.net/maven2/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -19,13 +17,13 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.12</version>
 		</dependency>
-        <dependency>
-            <groupId>org.neuroph</groupId>
-            <artifactId>neuroph-core</artifactId>
-            <version>2.96</version>
-        </dependency>
-        
-        		<dependency>
+		<dependency>
+			<groupId>org.neuroph</groupId>
+			<artifactId>neuroph-core</artifactId>
+			<version>2.96</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.8.0-M1</version>
@@ -57,7 +55,11 @@
 				</configuration>
 
 
-
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
 			</plugin>
 		</plugins>
 	</build>
