--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.tao.ai.rl</groupId>
 	<artifactId>tabular</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+<packaging>jar</packaging>
 	<repositories>
 		<repository>
 			<id>neuroph.sourceforge.net</id>
